# Messec

./: .gitignore  .travis.yml  CMakeLists.txt  Messec.pro  Messec.sln  README.md  TravisMakefile  messec.pro
client/: client.vcxproj  client.vcxproj.filters
other/: 10x20mb.diagsession  Messec_info.docx  Messec_info.docx.docx  Optimalizácia.docx  Presentation.pptx  entropia512.diagsession  entropia64.diagsession  login_random_logout1000_users_no_registration.diagsession
server/: server.vcxproj  server.vcxproj.filters
src/client/: Client.pro  client.pro  client.vcxproj  client.vcxproj.filters  clientManager.cpp  clientManager.h  messenger.cpp  messenger.h  messenger.h.orig  moc_messenger.cpp
src/common/: Common.pro  Common.vcxproj  Common.vcxproj.filters  common.pro  connectionErrors.h  crypto.cpp  crypto.h  ipv4.cpp  ipv4.h  messageTypes.h
src/server/: Server.pro  client.cpp  client.cpp.orig  client.h  database.cpp  database.h  server.pro  server.vcxproj  server.vcxproj.filters  serverManager.cpp  serverManager.cpp.orig  serverManager.h
src/tests/: Tests.pro  catch.hpp  dbtest123456789ok.db  main.cpp  myDB_clear.db  myDB_deleteUser.db  myDB_rw.db  myDB_test  myDB_to_clear  test_database  test_database.db  test_database1.db  test_database2.db  test_database3.db  tests.pro  tests.vcxproj  tests.vcxproj.filters
testing/: testing.vcxproj  testing.vcxproj.filters
vsprojects/client/: client.vcxproj  client.vcxproj.filters
vsprojects/server/: server.vcxproj  server.vcxproj.filters
vsprojects/testing/: testing.vcxproj  testing.vcxproj.filters
(+11 files in other folders)
